--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,35 +11,31 @@ default = ["nightly", "webservice"]
 
 [dependencies]
 bpf = "*"
+bytes = "*"
 clap = "*"
 clippy = {version = "*", optional = true}
 clockpro-cache = "*"
 coarsetime = "*"
+dnstap = "*"
 env_logger = "*"
+futures = "*"
 hyper = {version = "*", optional = true, default-features = false}
 jumphash = "*"
 log = "*"
+net2 = "*"
 nix = "~0.7.0"
 privdrop = "*"
 prometheus = {version = "*", default-features = false}
 rand = "*"
 siphasher = "*"
-socket-priority = "*"
 slab = "*"
+socket-priority = "*"
+tokio-core = "*"
+tokio-io = "*"
+tokio-proto = "*"
+tokio-service = "*"
+tokio-timer = "*"
 toml = "*"
-
-[dependencies.bytes]
-git = "https://github.com/carllerche/bytes"
-
-[dependencies.framestream]
-git = "https://github.com/jedisct1/rust-framestream"
-
-[dependencies.mio]
-git = "https://github.com/carllerche/mio"
-rev = "9276b16f9fdfca070a9a2345549bbd310ec595c3"
-
-[dependencies.dnstap]
-git = "https://github.com/jedisct1/rust-dnstap"
 
 [profile.release]
 lto = true
