--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ nightly = ["clap/nightly", "hyper/nightly", "log/nightly", "prometheus/nightly",
 default = ["nightly", "webservice"]
 
 [dependencies]
+base64 = "*"
 bpf = "*"
+byteorder = "*"
 bytes = "*"
 clap = "*"
 clippy = {version = "*", optional = true}
@@ -23,7 +25,7 @@ hyper = {version = "*", optional = true, default-features = false}
 jumphash = "*"
 log = "*"
 net2 = "*"
-nix = "~0.7.0"
+nix = "~0.8 "
 privdrop = "*"
 prometheus = {version = "*", default-features = false}
 rand = "*"
